--- a/.gitignore
+++ b/.gitignore
@@ -32,7 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
-/ai-interview-3c9fe-firebase-adminsdk-fbsvc-b4a2ec85a3.json
+.ai-interview-3c9fe-firebase-adminsdk-fbsvc-b4a2ec85a3.json
 # vercel
 .vercel
 
